--- a/src/main/resources/templates/element.html
+++ b/src/main/resources/templates/element.html
@@ -5,7 +5,6 @@
     <title>登録元素詳細画面</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/datatables/css/jquery.dataTables.css}"/>
-    <link rel="stylesheet" th:href="@{/css/index.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/datatables/js/jquery.dataTables.min.js}"></script>
@@ -43,7 +42,7 @@
         </tfoot>
     </table>
     <div>
-        <a href="/index">登録元素一覧画面へ戻る</a>
+        <a href="/elements">登録元素一覧画面へ戻る</a>
     </div>
 </div>
 </body>
