--- a/src/main/resources/templates/regist.html
+++ b/src/main/resources/templates/regist.html
@@ -4,10 +4,39 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>登録画面</title>
     <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/css/common.css}"/>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
+<!-- ナビゲーションバー -->
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-for-regist" aria-controls="navbar-for-regist" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar-for-regist">
+        <a class="navbar-brand" href="/elements">Janaf</a>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="/elements">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/form">Form</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://kinetics.nist.gov/janaf/" target="_blank">NIST JANAF Link</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <body>
+<div class="container" style="margin-top:20px;padding-bottom:0px;">
 <h1>登録完了</h1>
+</div>
 </body>
+
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">Copyright &copy; 2017 y-ok All Rights Reserved.</p>
+    </div>
+</footer>
 </html>
