--- a/src/main/resources/templates/thermochemical-data.html
+++ b/src/main/resources/templates/thermochemical-data.html
@@ -33,6 +33,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/form">Form</a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/plot">Plot</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="http://kinetics.nist.gov/janaf/" target="_blank">NIST JANAF Link</a>
             </li>
